# MasquerAge-PWA

./: .env.example  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml
benchmarks/: .gitignore  k6-mosip-sdk-benchmark.js  locustfile.py  mosip-qr-decoder.js  mosip-qr-encoder.js  package.json  pnpm-lock.yaml  pyproject.toml
benchmarks/fastify/: fastify-qr-decoder.js  package.json  pnpm-lock.yaml  qr-encoder.js
benchmarks/src/: .gitignore  HttpRequest.js  LoadEngine.js  QRDecoderEngine.js  QRDecoderLogProcessor.js  benchmark.js  main.js
benchmarks/src/core/: LoadEngine.js
benchmarks/src/load/: LoadEngine.js
benchmarks/src/mosip-auth-manager/: MOSIPLogProcessor.js
benchmarks/src/node-manager/: NodeLogProcessor.js
benchmarks/src/qr-manager/: QRDecoderEngine.js  QRDecoderLogProcessor.js  QREncoderGenerator.js
drizzle/: 0000_users_schema.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
mosip-sdk-api/: README.md  auth.py  main.py  pyproject.toml
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/qr-components/: QRCode.svelte  QRData.svelte  QRScanner.svelte  use-usermedia.svelte
src/lib/server/: auth.ts
src/lib/server/db/: index.ts  (+1 more)
src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  Footer.svelte  Header.svelte  Navbar.svelte  QRScanner.svelte  Sidebar.svelte
src/routes/forgot-password/: +page.svelte  ForgotPassword.svelte
src/routes/generate-id/: +page.server.ts  +page.svelte
src/routes/generate-qr/: +page.svelte  IDCard.svelte
static/: favicon.png.old  manifest.json
(+36 files in other folders)
