[project]
name = "mosip-sdk-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.7",
    "fastapi[standard]>=0.115.7",
    "mosip-auth-sdk",
]

[tool.uv.sources]
mosip-auth-sdk = { git = "https://github.com/mosip/ida-auth-sdk.git", rev = "release-0.9.x" }
